# rodomopo

./: Cargo.toml  README.md  README.txt  TODO.md  status.txt
data/: status.txt
src/: config.rs  file_io.rs  lib.rs  main.rs  run.rs  timestamping.rs
src/config/: internal.rs  user.rs
