[package]
name = "boss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.5.2", features = ["derive"] }
lazy_static = "1.4.0"
rustyline = "14.0.0"

[[bin]]
name = "boss"
path = "src/main.rs"
