[package]
name = "rodomopo"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.5.2", features = ["derive"] }
dirs = "5.0.1"
lazy_static = "1.4.0"
rustyline = "14.0.0"

[[bin]]
name = "rodomopo"
path = "src/main.rs"
